--- a/index.html
+++ b/index.html
@@ -11,14 +11,17 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
+        <span>A</span>
+        <span>N</span>
+        <span>N</span>
+        <span>E</span>
         <span>H</span>
         <span>A</span>
-        <span>L</span>
         <span>L</span>
         <span>O</span>
     </div>
     <div class="description">
-        <span>Aku ada hadiah spesial buat kamu!!</span>
+        <span>Javi ada hadiah spesial buat Anne!!</span>
     </div>
     <div class="button">
         <button>
